--- a/src/scss/Plugins/Core/search.scss
+++ b/src/scss/Plugins/Core/search.scss
@@ -57,6 +57,12 @@
 		width: 100%;
 		margin: 0;
 		background: transparent;
+
+		.is-mobile & {
+			input {
+				padding: 4px 14px 4px 28px;
+			}
+		}
 	}
 
 	.search-result-container {
